# deskly-tauri

./: .gitignore  AUTH_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deskly-release.jks  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-manifest.json  icon.icns
src-tauri/src/: auth.rs  faculty_info.json  lib.rs  main.rs
src-tauri/src/attendance/: README.md  commands.rs  parser.rs  types.rs
src-tauri/src/attendance/commands/: get_current.rs  get_detail.rs  get_semesters.rs  mod.rs
src-tauri/src/auth/: README.md  captcha.rs  commands.rs  constants.rs  crypto.rs  helpers.rs  http.rs  keyring.rs  mod.rs  parser.rs  store.rs  types.rs
src-tauri/src/auth/commands/: auto_relogin.rs  clear_semester.rs  clear_tokens.rs  get_credential_status.rs  get_semester.rs  get_semesters.rs  get_state.rs  get_tokens.rs  keyring_delete.rs  keyring_get.rs  keyring_set.rs  login.rs  logout.rs  (+4 more)
src-tauri/src/content/: README.md  commands.rs  parser.rs  types.rs
src-tauri/src/features/: README.md  commands.rs  parser.rs  types.rs
src-tauri/src/feedback/: README.md  commands.rs  parser.rs  types.rs
src-tauri/src/grades/: README.md  commands.rs  mod.rs  parser.rs  types.rs
src-tauri/src/marks/: README.md  commands.rs  mod.rs  parser.rs  types.rs
src-tauri/src/profile/: README.md  commands.rs  parser.rs  types.rs
src-tauri/src/timetable/: README.md  commands.rs  formatter.rs  mod.rs  parser.rs  types.rs
(+153 files in other folders)
